HW6/P-2.3.100-Ruler/wdir_msg/compile.err

Ruler.java:16: error: cannot find symbol
        System.out.println(String.join("", Collections.nCopies(n, "=")));
                                           ^
  symbol:   variable Collections
  location: class Ruler
1 error


